public enum Especialidad {
    MEDICO_DE_EMERGENCIAS,
    MEDICO_CLINICO,
    PEDIATRA,
    CIRUJANO
}
