enum TipoArea {
    EMERGENCIAS,
    CLINICA_MEDICA,
    PEDIATRIA,
    CIRUGIA
}